# auto-shop

./: .env.template  Makefile  docker-compose.yml  main.py  pyproject.toml
actions/: check_redis_connection.py  create_superuser.py
alembic/: env.py
alembic/versions/: 2024_08_16_2130-34392a157143_create_products_table.py  2024_08_16_2133-522b1f8028bc_create_users_table.py  2024_08_16_2357-6de37ec874dd_create_access_token_table.py
api/: __init__.py
api/api_v1/: __init__.py
api/api_v1/cache/: __init__.py  accessor.py  cache_products.py
api/api_v1/handlers/: auth.py  messages.py  products.py  users.py
api/api_v1/repository/: __init__.py  products.py
api/api_v1/services/: __init__.py  service_products.py
core/: __init__.py  config.py
core/authentication/: mail.py  transport.py  user_manager.py
core/database/: __init__.py
core/database/models/: __init__.py  access_token.py  base.py  products.py  users.py
core/database/models/mixins/: __init__.py
core/database/schemas/: __init__.py  product.py  user.py
dependencies/: broker_consumer.py  broker_producer.py
dependencies/authentication/: __init__.py  access_tokens.py  backends.py  fastap_users.py  mail_client.py  strategy.py  user_manager.py  users.py
dependencies/caches/: product.py
dependencies/repository/: product.py
dependencies/services/: product.py
infra/: gunicorn.conf.py
kafka/: consumer.py  producer.py
utils/: __init__.py  auth.py  exceptions.py  item_name.py
