[tool.poetry]
name = "selffastapi"
version = "0.1.0"
description = ""
authors = ["Fedorov Semen <FedorovSemen28@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = { extras = ["standart"], version = "^0.30.5" }
pydantic = { extras = ["email"], version = "^2.8.2" }
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
orjson = "^3.10.7"
gunicorn = "^23.0.0"
fastapi-users = { extras = ["sqlalchemy"], version = "^13.0.0" }
redis = "^5.0.8"
aiokafka = "^0.11.0"
aio-pika = "^9.4.3"
fast-depends = "^2.4.11"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
